# docker-health-monitor

./: CHANGELOG.md  Dockerfile  README.md  docker-compose.yml  grafana-dashboard.json  pyproject.toml
examples/: config-with-alerts.yaml
src/docker_health_monitor/: __init__.py  alerter.py  cli.py  collector.py  config.py  exporter.py
tests/: test_cli.py  test_collector.py  test_exporter.py
